--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.9",
     "headroom.js": "0.12.0",
+    "lodash": "^4.17.21",
     "moment": "2.29.4",
     "nouislider": "14.6.0",
-    "prop-types": "15.8.1",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-datetime": "3.1.1",
     "react-dom": "18.2.0",
     "react-github-button": "0.1.11",
     "react-google-maps": "9.4.5",
+    "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.5.1",
@@ -54,8 +57,8 @@
     "react-dom": ">=16.0.0"
   },
   "optionalDependencies": {
-    "typescript": "4.7.4",
     "@types/googlemaps": "3.39.11",
-    "@types/markerclustererplus": "2.1.33"
+    "@types/markerclustererplus": "2.1.33",
+    "typescript": "^4.9.5"
   }
 }
