--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "react": "18.2.0",
     "react-datetime": "3.1.1",
     "react-dom": "18.2.0",
+    "react-floating-action-button": "^1.0.5",
     "react-github-button": "0.1.11",
     "react-google-maps": "9.4.5",
     "react-lottie": "^1.2.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
+    "react-rounded-image": "^2.0.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.5.1",
