--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@fortawesome/fontawesome-free": "5.14.0",
     "@glidejs/glide": "3.5.2",
     "@testing-library/jest-dom": "5.16.5",
@@ -14,6 +15,7 @@
     "headroom.js": "0.12.0",
     "lodash": "^4.17.21",
     "moment": "2.29.4",
+    "netlify-cli": "^13.2.1",
     "nouislider": "14.6.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
@@ -22,18 +24,24 @@
     "react-floating-action-button": "^1.0.5",
     "react-github-button": "0.1.11",
     "react-google-maps": "9.4.5",
+    "react-helmet": "^6.1.0",
+    "react-lazyload": "^3.2.0",
     "react-lottie": "^1.2.3",
     "react-responsive-carousel": "^3.2.23",
     "react-reveal": "^1.2.2",
     "react-rounded-image": "^2.0.14",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
+    "react-tsparticles": "^2.9.3",
     "reactstrap": "8.5.1",
-    "sass": "1.53.0"
+    "sass": "1.53.0",
+    "tsparticles": "^2.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm start",
